# Car-Pricing-Prediction-Model

./: .gitignore  Makefile  README.md  autoresearch-analysis.ipynb  autoresearch-car-model.py  car-program.md  data-exploration.ipynb  get_brands.py  merge_data.py  merged_cars.csv  price_model.py  pyproject.toml  results.tsv  scrape_interactive.py  scraper.py  test-car-price-model.ipynb
